testdata/test/resources/com/yafred/asn1/test/should-fail/set_duplicate_component.asn
-- FAILS: duplicate component names
Module DEFINITIONS AUTOMATIC TAGS ::= BEGIN



My-Set ::= SET {
un BOOLEAN,
deux BOOLEAN,
un BOOLEAN,
...,
[[ un BOOLEAN ]]
}



END